# mkdocs-render-swagger-plugin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  changelog.md  render_swagger.py  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  release.yml  test.yml
example_project/: 1.2  mkdocs.yml
example_project/docs/: index.md  openapi.yml  openapi_example.md
scripts/: pre_push.sh
tests/: __init__.py  test_plugin.py
tests/arbitrary_sample/: openapi.yml
tests/samples/: openapi_3.0.yml
