[metadata]
name = mkdocs-render-swagger-plugin
version = 0.1.2
author = Bar Harel
author_email = bzvi7919@gmail.com
description = MKDocs plugin for rendering swagger & openapi files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bharel/mkdocs-render-swagger-plugin
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = render_swagger
python_requires = >=3.8
install_requires =
    mkdocs >= 1.4

[options.extras_require]
dev =
    flake8
    mypy
    pyyaml
    coverage

[options.entry_points]
mkdocs.plugins =
    render_swagger = render_swagger:SwaggerPlugin
